--- a/client-solidjs/src/index.css
+++ b/client-solidjs/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    @apply bg-gray-100
+}
+
+.inactive{
+    @apply text-stone-600
+}
